fixed horizontal scrolling of a board with columns that extend past the right side of the screen

--- a/public/css/theme-blue.css
+++ b/public/css/theme-blue.css
@@ -73,6 +73,8 @@ body {
   padding: 10px;
 }
 .board {
+  overflow: scroll;
+  white-space: nowrap;
 }
 .add-card {
   border-top-left-radius: 0;
